# playground

./: .gitignore  README.org  flake.nix
_archive/: README.org
_archive/bb-k8s/: .gitignore  README.md  bb.edn  default.nix  deps.edn  reflect-cfg.json
_archive/flashcard/: build-push.sh
_archive/golinks/: CHANGELOG.md  README.md  default.nix  pom.xml
algo/Remove-Duplicates-from-Sorted-Array/: solution-opt.py  solution.py
algo/add-binary/: solution.py
algo/climbing-stairs/: solution.py
algo/elgo/: toto.py
argocd/: Vagrantfile
flashcard/: .gitignore  README.md  go.mod  main.go
flashcard/back/: Dockerfile  entrypoint.sh  pyproject.toml
flashcard/back/back/: admin.py  settings.py  urls.py
flashcard/back/back/cardsystems/: models.py  serializers.py  views.py
flashcard/back/back/migrations/: 0001_initial.py  0003_card_sm2_easiness_factor_card_sm2_interval_and_more.py  0005_rename_sm2_interval_card_sm2_next_date.py  0006_rename_testworkflowquestions_testworkflowquestion.py  0007_card_sm2_interval_testworkflowquestion_done.py  0008_alter_card_sm2_next_date.py  0009_alter_cardtag_card.py  0011_alter_cardtag_card.py
lib/: default.nix
projects/dns/: Cargo.toml  README.org
projects/dns/src/: main.rs
reshipi/: TODO.md  docker-compose.yml  drop.sql  fixtures.sql  misc.md  rbac.sql  schema.sql
reshipi-django/: README.org
reshipi-reframe/: .gitignore  MVP.org  README.md  deps.edn  goals.org  package-lock.json  package.json  shadow-cljs.edn  tailwind.config.js
scripts/: private-home.sh
test-flake/: flake.nix
virtualization/: create-qcow.sh
(+228 files in other folders)
