[package]
name = "dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is used to concatenate bytestrings of DNS packets
byte-strings = "0.1.3"

# This is used to help convert integers from the packet to Rust's enums
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
